.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: to-do-service
  name: to-do-service
  namespace: simon-berndt
spec:
  clusterIP: 10.245.232.46
  clusterIPs:
    - 10.245.232.46
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 8080-80
      nodePort: 32689
      port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: to-do-deployment
  sessionAffinity: None
  type: NodePort
